--- a/public/login.html
+++ b/public/login.html
@@ -1,36 +1,130 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Login</title>
+  <title>Login • RecipeBook</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/theme.css" rel="stylesheet">
+
+  <style>
+    .rb-auth-hero{
+      min-height: calc(100vh - 72px);
+      display:flex;
+      align-items:center;
+      position: relative;
+      overflow:hidden;
+    }
+    .rb-auth-hero::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        linear-gradient(90deg, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.40) 55%, rgba(0,0,0,0.70) 100%),
+        url("/img/food.jpg") center/cover no-repeat;
+      transform: scale(1.02);
+    }
+    .rb-auth-hero .container{ position:relative; z-index:2; }
+    .rb-auth-box{
+      max-width: 560px;
+      margin-left:auto;
+      background: rgba(111, 29, 59, 0.92);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 16px;
+      padding: 28px;
+      color: rgba(255,255,255,0.92);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.35);
+    }
+    .rb-input, .rb-input:focus{
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.14);
+      color: rgba(255,255,255,0.92);
+      box-shadow: none;
+    }
+    .rb-input::placeholder{ color: rgba(255,255,255,0.45); }
+    .rb-label{ color: rgba(255,255,255,0.75); }
+    .rb-link{ color: rgba(255,255,255,0.85); }
+    .rb-link:hover{ color:#fff; }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container py-5" style="max-width: 520px;">
-    <h1 class="mb-4">Login</h1>
 
-    <div class="card p-4">
-      <div class="mb-3">
-        <label class="form-label">Email</label>
-        <input id="email" class="form-control" type="email" placeholder="you@mail.com">
+<body>
+
+  <nav class="navbar navbar-expand-lg rb-navbar">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">🍲 RecipeBook</a>
+
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+          <span id="nav-guest" class="d-flex gap-2 align-items-lg-center">
+            <li class="nav-item"><a class="btn btn-outline-light rb-btn ms-lg-2 active" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="btn btn-primary rb-btn rb-btn-primary ms-lg-2" href="register.html">Register</a></li>
+          </span>
+
+          <span id="nav-auth" class="d-flex gap-2 align-items-lg-center d-none">
+            <li class="nav-item"><a class="nav-link" href="recipes.html">My Recipes</a></li>
+            <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
+            <li class="nav-item">
+              <button class="btn btn-outline-light rb-btn ms-lg-2" id="logoutBtn" type="button">Logout</button>
+            </li>
+          </span>
+        </ul>
       </div>
-
-      <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input id="password" class="form-control" type="password" placeholder="••••••••">
-      </div>
-
-      <button id="btnLogin" class="btn btn-primary w-100">Login</button>
-
-      <p class="mt-3 mb-0">
-        No account? <a href="register.html">Register</a>
-      </p>
-
-      <div id="msg" class="mt-3 small text-danger"></div>
     </div>
-  </div>
+  </nav>
 
+  <main class="rb-auth-hero">
+    <div class="container py-5">
+      <div class="row g-4 align-items-center">
+        <div class="col-lg-6 text-white">
+          <h1 class="display-5 rb-hero-title mb-2">WELCOME BACK</h1>
+          <p class="rb-hero-sub mb-0">
+            Login to manage your recipes.
+          </p>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="rb-auth-box">
+            <h2 class="h4 fw-bold mb-3">Login</h2>
+
+            <div class="mb-3">
+              <label class="form-label rb-label">Email</label>
+              <input id="email" class="form-control rb-input" type="email" placeholder="you@mail.com" autocomplete="email">
+            </div>
+
+            <div class="mb-2">
+              <label class="form-label rb-label">Password</label>
+              <input id="password" class="form-control rb-input" type="password" placeholder="••••••••" autocomplete="current-password">
+            </div>
+
+            <button id="btnLogin" class="btn btn-primary rb-btn rb-btn-primary w-100 mt-3" type="button">
+              Login
+            </button>
+
+            <div id="msg" class="mt-3 small text-warning"></div>
+
+            <div class="mt-3 small">
+              No account?
+              <a class="rb-link text-decoration-none" href="register.html">Register</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center mt-5 rb-muted small">
+        © RecipeBook — Final Project
+      </div>
+    </div>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/navbar.js"></script>
   <script src="js/login.js"></script>
 </body>
 </html>
