--- a/public/profile.html
+++ b/public/profile.html
@@ -1,40 +1,138 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Profile</title>
+  <title>Profile • RecipeBook</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/theme.css" rel="stylesheet">
+
+  <style>
+    .rb-profile-hero{
+      position: relative;
+      min-height: 260px;
+      overflow: hidden;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+    }
+    .rb-profile-hero::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        linear-gradient(90deg, rgba(0,0,0,0.75) 0%, rgba(0,0,0,0.40) 55%, rgba(0,0,0,0.70) 100%),
+        url("/img/food.jpg") center/cover no-repeat;
+      transform: scale(1.02);
+    }
+    .rb-profile-hero .container{
+      position: relative;
+      z-index: 2;
+      padding-top: 48px;
+      padding-bottom: 48px;
+    }
+    .rb-input, .rb-input:focus{
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.14);
+      color: rgba(255,255,255,0.92);
+      box-shadow: none;
+    }
+    .rb-input::placeholder{ color: rgba(255,255,255,0.45); }
+    .rb-label{ color: rgba(255,255,255,0.75); }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container py-5" style="max-width: 800px;">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="m-0">Profile</h1>
-      <div>
-        <a class="btn btn-outline-primary me-2" href="recipes.html">Recipes</a>
-        <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg rb-navbar">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">🍲 RecipeBook</a>
+
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+          <span id="nav-guest" class="d-flex gap-2 align-items-lg-center">
+            <li class="nav-item"><a class="btn btn-outline-light rb-btn ms-lg-2" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="btn btn-primary rb-btn rb-btn-primary ms-lg-2" href="register.html">Register</a></li>
+          </span>
+
+          <span id="nav-auth" class="d-flex gap-2 align-items-lg-center d-none">
+            <li class="nav-item"><a class="nav-link" href="recipes.html">My Recipes</a></li>
+            <li class="nav-item"><a class="nav-link active" href="profile.html">Profile</a></li>
+            <li class="nav-item">
+              <button class="btn btn-outline-light rb-btn ms-lg-2" id="logoutBtn" type="button">Logout</button>
+            </li>
+          </span>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header class="rb-profile-hero">
+    <div class="container">
+      <div class="row g-3 align-items-center">
+        <div class="col-lg-7">
+          <h1 class="display-6 rb-hero-title mb-2">PROFILE</h1>
+          <p class="rb-hero-sub mb-0">Update your account info. Protected endpoints with JWT.</p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="container py-5" style="max-width: 1000px;">
+    <div class="row g-4">
+      <div class="col-lg-7">
+        <div class="rb-panel">
+          <h5 class="mb-3">Account details</h5>
+
+          <div class="row g-3">
+            <div class="col-md-6">
+              <label class="form-label rb-label">Username</label>
+              <input id="username" class="form-control rb-input" placeholder="Your name">
+            </div>
+
+            <div class="col-md-6">
+              <label class="form-label rb-label">Email</label>
+              <input id="email" class="form-control rb-input" type="email" placeholder="you@mail.com">
+            </div>
+          </div>
+
+          <button class="btn btn-primary rb-btn rb-btn-primary mt-3" id="saveBtn" type="button">
+            Save changes
+          </button>
+
+          <div id="msg" class="mt-3 small"></div>
+        </div>
+      </div>
+
+      <div class="col-lg-5">
+        <div class="card rb-card border-0 shadow-sm">
+          <div class="card-body p-4">
+            <h5 class="fw-bold mb-2">Quick actions</h5>
+            <p class="rb-muted mb-3">Go to your recipes or return to home.</p>
+
+            <div class="d-grid gap-2">
+              <a class="btn btn-primary rb-btn rb-btn-primary" href="recipes.html">My Recipes</a>
+              <a class="btn btn-outline-light rb-btn" href="index.html">Home</a>
+            </div>
+
+            <hr style="border-color: rgba(255,255,255,0.12)" class="my-4">
+
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="card p-4">
-      <h5 class="mb-3">My Info</h5>
-
-      <div class="row g-3">
-        <div class="col-md-6">
-          <label class="form-label">Username</label>
-          <input id="username" class="form-control">
-        </div>
-        <div class="col-md-6">
-          <label class="form-label">Email</label>
-          <input id="email" class="form-control" type="email">
-        </div>
-      </div>
-
-      <button class="btn btn-primary mt-3" id="saveBtn">Save</button>
-      <div id="msg" class="mt-3 small"></div>
+    <div class="text-center mt-5 rb-muted small">
+      © RecipeBook — Final Project
     </div>
-  </div>
+  </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/navbar.js"></script>
   <script src="js/profile.js"></script>
 </body>
 </html>
