--- a/public/recipes.html
+++ b/public/recipes.html
@@ -1,64 +1,177 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>My Recipes</title>
+  <title>My Recipes • RecipeBook</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/theme.css" rel="stylesheet">
+
+  <style>
+    .rb-page-hero{
+      position: relative;
+      min-height: 260px;
+      overflow: hidden;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+    }
+    .rb-page-hero::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        linear-gradient(90deg, rgba(0,0,0,0.70) 0%, rgba(0,0,0,0.40) 55%, rgba(0,0,0,0.65) 100%),
+        url("/img/food.jpg") center/cover no-repeat;
+      transform: scale(1.02);
+    }
+    .rb-page-hero .container{
+      position: relative;
+      z-index: 2;
+      padding-top: 48px;
+      padding-bottom: 48px;
+    }
+    .rb-chip{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:6px 12px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,0.18);
+      background: rgba(255,255,255,0.06);
+      color: rgba(255,255,255,0.85);
+      font-size: 0.9rem;
+    }
+    .rb-input, .rb-input:focus{
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.14);
+      color: rgba(255,255,255,0.9);
+      box-shadow: none;
+    }
+    .rb-input::placeholder{
+      color: rgba(255,255,255,0.45);
+    }
+    .rb-label{
+      color: rgba(255,255,255,0.75);
+    }
+    .rb-list-card{
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 14px;
+      padding: 16px;
+      margin-bottom: 14px;
+    }
+    .rb-list-title{
+      color: rgba(255,255,255,0.92);
+      font-weight: 700;
+      margin: 0;
+      font-size: 1.05rem;
+    }
+    .rb-list-desc{
+      color: rgba(255,255,255,0.65);
+      margin-top: 4px;
+      margin-bottom: 0;
+      font-size: 0.95rem;
+    }
+    .rb-mini{
+      color: rgba(255,255,255,0.65);
+      font-size: 0.85rem;
+    }
+    .rb-divider{
+      height: 1px;
+      background: rgba(255,255,255,0.08);
+      margin: 18px 0;
+    }
+  </style>
 </head>
-<body class="bg-light">
-  <div class="container py-5">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="m-0">My Recipes</h1>
-      <div>
-        <a class="btn btn-outline-primary me-2" href="profile.html">Profile</a>
-        <button class="btn btn-outline-danger" id="logoutBtn">Logout</button>
+
+<body>
+
+  <nav class="navbar navbar-expand-lg rb-navbar">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">🍲 RecipeBook</a>
+
+      <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+          <span id="nav-guest" class="d-flex gap-2 align-items-lg-center">
+            <li class="nav-item"><a class="btn btn-outline-light rb-btn ms-lg-2" href="login.html">Login</a></li>
+            <li class="nav-item"><a class="btn btn-primary rb-btn rb-btn-primary ms-lg-2" href="register.html">Register</a></li>
+          </span>
+
+          <span id="nav-auth" class="d-flex gap-2 align-items-lg-center d-none">
+            <li class="nav-item"><a class="nav-link active" href="recipes.html">My Recipes</a></li>
+            <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
+            <li class="nav-item">
+              <button class="btn btn-outline-light rb-btn ms-lg-2" id="logoutBtn" type="button">Logout</button>
+            </li>
+          </span>
+        </ul>
       </div>
     </div>
+  </nav>
 
+  <header class="rb-page-hero">
+    <div class="container">
+      <div class="row g-3 align-items-center">
+        <div class="col-lg-7">
+          <h1 class="display-6 rb-hero-title mb-2">MY RECIPES</h1>
+          <p class="rb-hero-sub mb-0">
+            Create, edit and manage your recipes. Only you can change your own data.
+          </p>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="container py-5">
     <div class="row g-4">
+
       <div class="col-lg-5">
-        <div class="card p-4">
+        <div class="rb-panel">
           <h5 class="mb-3" id="formTitle">Create Recipe</h5>
 
           <input type="hidden" id="editId" />
 
           <div class="mb-3">
-            <label class="form-label">Title</label>
-            <input id="title" class="form-control" placeholder="Pasta Carbonara">
+            <label class="form-label rb-label">Title</label>
+            <input id="title" class="form-control rb-input" placeholder="Pasta Carbonara">
           </div>
 
           <div class="mb-3">
-            <label class="form-label">Description</label>
-            <textarea id="description" class="form-control" rows="2" placeholder="Short description..."></textarea>
+            <label class="form-label rb-label">Description</label>
+            <textarea id="description" class="form-control rb-input" rows="2" placeholder="Short description..."></textarea>
           </div>
 
           <div class="mb-3">
-            <label class="form-label">Ingredients (one per line)</label>
-            <textarea id="ingredients" class="form-control" rows="3" placeholder="Eggs&#10;Cheese&#10;Pasta"></textarea>
+            <label class="form-label rb-label">Ingredients (one per line)</label>
+            <textarea id="ingredients" class="form-control rb-input" rows="4" placeholder="Eggs&#10;Cheese&#10;Pasta"></textarea>
           </div>
 
           <div class="mb-3">
-            <label class="form-label">Steps (one per line)</label>
-            <textarea id="steps" class="form-control" rows="4" placeholder="Boil pasta&#10;Mix sauce&#10;Combine"></textarea>
+            <label class="form-label rb-label">Steps (one per line)</label>
+            <textarea id="steps" class="form-control rb-input" rows="5" placeholder="Boil pasta&#10;Mix sauce&#10;Combine"></textarea>
           </div>
 
           <div class="row g-2">
             <div class="col-6">
-              <label class="form-label">Cook time (min)</label>
-              <input id="cookTime" class="form-control" type="number" min="0" value="0">
+              <label class="form-label rb-label">Cook time (min)</label>
+              <input id="cookTime" class="form-control rb-input" type="number" min="0" value="0">
             </div>
             <div class="col-6 d-flex align-items-end">
               <div class="form-check">
                 <input id="isPublic" class="form-check-input" type="checkbox">
-                <label class="form-check-label">Public</label>
+                <label class="form-check-label rb-label">Public</label>
               </div>
             </div>
           </div>
 
           <div class="d-flex gap-2 mt-3">
-            <button class="btn btn-success w-100" id="saveRecipeBtn">Save</button>
-            <button class="btn btn-secondary w-100" id="cancelEditBtn" style="display:none;">Cancel</button>
+            <button class="btn btn-primary rb-btn rb-btn-primary w-100" id="saveRecipeBtn" type="button">Save</button>
+            <button class="btn btn-outline-light rb-btn w-100" id="cancelEditBtn" type="button" style="display:none;">Cancel</button>
           </div>
 
           <div id="msg" class="mt-3 small"></div>
@@ -66,13 +179,63 @@
       </div>
 
       <div class="col-lg-7">
-        <div class="card p-4">
-          <h5 class="mb-3">List</h5>
-          <div id="list"></div>
+        <div class="card rb-card border-0 shadow-sm">
+          <div class="card-body p-4">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h5 class="fw-bold m-0">Your list</h5>
+              <span class="rb-mini">Latest first</span>
+            </div>
+
+            <div class="rb-divider"></div>
+
+            <div id="list"></div>
+
+            <div class="rb-mini mt-3">
+              Tip: click “Edit” to load recipe into the form.
+            </div>
+          </div>
         </div>
+      </div>
+
+    </div>
+
+    <div class="text-center mt-5 rb-muted small">
+      © RecipeBook — Final Project
+    </div>
+  </main>
+
+  <div class="modal fade" id="viewModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content" style="background: rgba(20,20,20,0.96); color: rgba(255,255,255,0.92); border: 1px solid rgba(255,255,255,0.12);">
+      <div class="modal-header" style="border-bottom: 1px solid rgba(255,255,255,0.10);">
+        <h5 class="modal-title" id="viewTitle">Recipe</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="d-flex flex-wrap gap-2 mb-3">
+          <span class="rb-chip" id="viewTime"></span>
+          <span class="rb-chip" id="viewPublic"></span>
+        </div>
+
+        <p class="rb-muted" id="viewDesc"></p>
+
+        <h6 class="fw-bold mt-3">Ingredients</h6>
+        <ul id="viewIngredients" class="mb-0"></ul>
+
+        <h6 class="fw-bold mt-4">Steps</h6>
+        <ol id="viewSteps" class="mb-0"></ol>
+      </div>
+      <div class="modal-footer" style="border-top: 1px solid rgba(255,255,255,0.10);">
+        <button class="btn btn-outline-light rb-btn" data-bs-dismiss="modal">Close</button>
+        <button class="btn btn-primary rb-btn rb-btn-primary" id="viewEditBtn" type="button">Edit</button>
       </div>
     </div>
   </div>
+</div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="js/navbar.js"></script>
 
   <script src="js/recipes.js"></script>
 </body>
