Added new environment variables for admin credenti als in the .env file. This will allow us to create an admin user with predefined email, password, and username for easier management of the application.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="community.html">Community</a></li>
 
           <span id="nav-guest" class="d-flex gap-2 align-items-lg-center">
             <li class="nav-item"><a class="btn btn-outline-light rb-btn ms-lg-2" href="login.html">Login</a></li>
@@ -30,6 +31,7 @@
           <span id="nav-auth" class="d-flex gap-2 align-items-lg-center d-none">
             <li class="nav-item"><a class="nav-link" href="recipes.html">My Recipes</a></li>
             <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
+            <li class="nav-item d-none" data-admin-only><a class="nav-link" href="admin.html">Admin</a></li>
             <li class="nav-item">
               <button class="btn btn-outline-light rb-btn ms-lg-2" id="logoutBtn" type="button">Logout</button>
             </li>
