--- a/public/recipes.html
+++ b/public/recipes.html
@@ -6,81 +6,6 @@
   <title>My Recipes • RecipeBook</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/theme.css" rel="stylesheet">
-
-  <style>
-    .rb-page-hero{
-      position: relative;
-      min-height: 260px;
-      overflow: hidden;
-      border-bottom: 1px solid rgba(255,255,255,0.08);
-    }
-    .rb-page-hero::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      background:
-        linear-gradient(90deg, rgba(0,0,0,0.70) 0%, rgba(0,0,0,0.40) 55%, rgba(0,0,0,0.65) 100%),
-        url("/img/food.jpg") center/cover no-repeat;
-      transform: scale(1.02);
-    }
-    .rb-page-hero .container{
-      position: relative;
-      z-index: 2;
-      padding-top: 48px;
-      padding-bottom: 48px;
-    }
-    .rb-chip{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      padding:6px 12px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,0.18);
-      background: rgba(255,255,255,0.06);
-      color: rgba(255,255,255,0.85);
-      font-size: 0.9rem;
-    }
-    .rb-input, .rb-input:focus{
-      background: rgba(255,255,255,0.06);
-      border: 1px solid rgba(255,255,255,0.14);
-      color: rgba(255,255,255,0.9);
-      box-shadow: none;
-    }
-    .rb-input::placeholder{
-      color: rgba(255,255,255,0.45);
-    }
-    .rb-label{
-      color: rgba(255,255,255,0.75);
-    }
-    .rb-list-card{
-      background: rgba(255,255,255,0.04);
-      border: 1px solid rgba(255,255,255,0.08);
-      border-radius: 14px;
-      padding: 16px;
-      margin-bottom: 14px;
-    }
-    .rb-list-title{
-      color: rgba(255,255,255,0.92);
-      font-weight: 700;
-      margin: 0;
-      font-size: 1.05rem;
-    }
-    .rb-list-desc{
-      color: rgba(255,255,255,0.65);
-      margin-top: 4px;
-      margin-bottom: 0;
-      font-size: 0.95rem;
-    }
-    .rb-mini{
-      color: rgba(255,255,255,0.65);
-      font-size: 0.85rem;
-    }
-    .rb-divider{
-      height: 1px;
-      background: rgba(255,255,255,0.08);
-      margin: 18px 0;
-    }
-  </style>
 </head>
 
 <body>
@@ -96,6 +21,7 @@
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-2">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="community.html">Community</a></li>
 
           <span id="nav-guest" class="d-flex gap-2 align-items-lg-center">
             <li class="nav-item"><a class="btn btn-outline-light rb-btn ms-lg-2" href="login.html">Login</a></li>
@@ -105,6 +31,7 @@
           <span id="nav-auth" class="d-flex gap-2 align-items-lg-center d-none">
             <li class="nav-item"><a class="nav-link active" href="recipes.html">My Recipes</a></li>
             <li class="nav-item"><a class="nav-link" href="profile.html">Profile</a></li>
+            <li class="nav-item d-none" data-admin-only><a class="nav-link" href="admin.html">Admin</a></li>
             <li class="nav-item">
               <button class="btn btn-outline-light rb-btn ms-lg-2" id="logoutBtn" type="button">Logout</button>
             </li>
@@ -240,3 +167,4 @@
   <script src="js/recipes.js"></script>
 </body>
 </html>
+
