--- a/public/admin.html
+++ b/public/admin.html
@@ -100,6 +100,17 @@
             <div id="adminList"></div>
           </div>
         </div>
+
+        <div class="card rb-card border-0 shadow-sm mt-4">
+          <div class="card-body p-4">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <h5 class="fw-bold m-0">All participants</h5>
+              <span class="rb-mini">Admin access</span>
+            </div>
+            <div class="rb-divider"></div>
+            <div id="usersList"></div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
