--- a/public/admin.html
+++ b/public/admin.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-lg rb-navbar">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">RecipeBook</a>
+      <a class="navbar-brand fw-bold" href="index.html">🍲 RecipeBook</a>
       <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
