--- a/public/profile.html
+++ b/public/profile.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="col-lg-5">
-        <div class="card rb-card border-0 shadow-sm">
+          <div class="card rb-card border-0 shadow-sm">
           <div class="card-body p-4">
             <h5 class="fw-bold mb-2">Quick actions</h5>
             <p class="rb-muted mb-3">Go to your recipes or return to home.</p>
@@ -122,6 +122,12 @@
             </div>
 
             <hr style="border-color: rgba(255,255,255,0.12)" class="my-4">
+
+            <h6 class="fw-bold mb-2">My favorites</h6>
+            <div id="favoritesMsg" class="small rb-muted mb-2"></div>
+            <div id="favoritesList" class="d-grid gap-2">
+              <div class="rb-muted small">Loading favorites...</div>
+            </div>
 
           </div>
         </div>
